--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ html {
 .time-box-con {
   background: linear-gradient(burlywood, white);
   padding: 20px;
+  text-align: center;
 }
 
 .lasagna-title {
@@ -158,10 +159,14 @@ html {
   margin-bottom: 20px;
   text-transform: capitalize;
   font-weight: lighter;
+  text-align: center;
 }
 
 .time-container {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .time-box:not(:last-child) {
@@ -182,8 +187,12 @@ html {
 }
 
 .ing-box,
-.method-box {
+.method-box,
+.ing-sub {
   padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .ing-box ul li {
@@ -195,6 +204,14 @@ html {
 
 .margin-bottom {
   margin-bottom: 20px;
+}
+
+.method-box ol,
+.method-box li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .method-box ol li {
@@ -226,6 +243,9 @@ html {
 footer {
   padding: 20px;
   background: linear-gradient(white, burlywood);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 fieldset {
