--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ html {
   text-align: center;
 }
 
-.lasagna-title {
+.title {
   font-size: 40px;
   margin-bottom: 20px;
   text-transform: capitalize;
